@@ -115,7 +115,7 @@ pam_sm_chauthtok(pam_handle_t *pamh, int flags,
 	}
 
 	/* Check the minimum UID argument. */
-	if ((options->minimum_uid != -1) &&
+	if ((options->minimum_uid != (uid_t)-1) &&
 	    (userinfo->uid < options->minimum_uid)) {
 		if (options->debug) {
 			debug("ignoring '%s' -- uid below minimum = %lu", user,
