@@ -169,7 +169,7 @@ _pam_krb5_sly_maybe_refresh(pam_handle_t *pamh, int flags,
 		return PAM_USER_UNKNOWN;
 	}
 
-	if ((options->minimum_uid != -1) &&
+	if ((options->minimum_uid != (uid_t)-1) &&
 	    (userinfo->uid < options->minimum_uid)) {
 		if (options->debug) {
 			debug("ignoring '%s' -- uid below minimum", user);
