@@ -39,8 +39,8 @@ int _pam_krb5_storetmp_file(const char *infile, const char *pattern,
 			    char *outfile, size_t outfile_len);
 int _pam_krb5_storetmp_delete(const char *file);
 ssize_t _pam_krb5_read_with_retry(int fd,
-				  unsigned char *buffer, size_t len);
+				  unsigned char *buffer, ssize_t len);
 ssize_t _pam_krb5_write_with_retry(int fd,
-				   const unsigned char *buffer, size_t len);
+				   const unsigned char *buffer, ssize_t len);
 
 #endif
